# 4ct-checks-rust-lean

./: .gitignore  .mcp.json  FORMAT.md  LICENSE  README.md  RESULTS.md
.claude/skills/: grind-first-proofs
.github/workflows/: ci.yml
lean4_port/: .gitignore  AGENTS.md  FIDELITY.md  Main.lean  NearLinear4ct.lean  PERFORMANCE_NOTES.md  Test.lean  enum_all_bad_cartwheels.sh  enum_possible_bad_wheels.sh  lake-manifest.json  lakefile.toml  p7_differential.sh
lean4_port/.codex/: config.toml
lean4_port/NearLinear4ct/: Cartwheel.lean  CartwheelProofs.lean  CombineCartwheel.lean  Configuration.lean  Degree.lean  HomomorphismProofs.lean  Mapping.lean  MappingProofs.lean  OptIdx.lean  PseudoConfiguration.lean  PseudoTriangulation.lean  PseudoTriangulationProofs.lean  Rule.lean  SmallNatPair.lean  Util.lean  UtilProofs.lean
modi/: Dockerfile  README.md  full_array.sh  full_differential.sh  full_job.sh  insight.sh  insight_job.sh  insight_preflight.sh  insight_submit_all.sh  modi_setup.sh  p7_job.sh  run_p7.sh  scaling.sh  scaling_job.sh
modi/runs/: README.md  full-d10-143319.out  full-d10-229.out  full-d11-143319.out  full-d11-229.out  full-d7-143319.out  full-d7-229.out  full-d8-143319.out  full-d8-229.out  full-d9-143319.out  (+3 more)
rust_port/: .gitignore  Cargo.toml  enum_all_bad_cartwheels.sh  enum_possible_bad_wheels.sh  p7_differential.sh
rust_port/src/: cartwheel.rs  combine_cartwheel.rs  compact_index.rs  configuration.rs  degree.rs  lib.rs  main.rs  mapping.rs  pseudo_configuration.rs  pseudo_triangulation.rs  rule.rs  test_support.rs  util.rs  work_queue.rs
(+1 files in other folders)
